--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
-        "copy-files": "mkdir -p images/LoginPage && find resources/images/ -type f -exec cp {} public/images/LoginPage \\;"
+        "build": "npm-run-all build-app copy-files",
+        "build-app": "vite build",
+        "copy-files": "mkdir -p plugins/ && find node_modules/select2/ -type f -exec cp {} public/plugins/select2 \\;"
     },
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
+        "select2": "^4.1.0-rc.0",
         "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
     },
@@ -18,8 +20,9 @@
         "@vitejs/plugin-vue": "^4.2.3",
         "daisyui": "^3.4.0",
         "feather-icons": "^4.29.0",
-        "jquery": "^3.7.0",
+        "jquery": "^3.7.1",
         "jquery-ui-dist": "^1.13.2",
-        "sweetalert2": "^11.7.18"
+        "lodash": "^4.17.21",
+        "sweetalert2": "^11.7.31"
     }
 }
