--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "npm-run-all build-app && copy-files",
+        "build": "npm-run-all build-app copy-files",
         "build-app": "vite build",
         "copy-files": "mkdir -p public/plugins/assets/select2 && find node_modules/select2/ -type f -exec cp {} public/plugins/assets/select2/ \\;",
         "build:prod": "cross-env NODE_ENV=production vite build"
@@ -24,6 +24,7 @@
         "jquery": "^3.7.1",
         "jquery-ui-dist": "^1.13.2",
         "lodash": "^4.17.21",
+        "npm-run-all": "^4.1.5",
         "sweetalert2": "^11.7.31"
     }
 }
