Fix Addressing Select2 After Build

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "dev": "vite",
         "build": "npm-run-all build-app copy-files",
         "build-app": "vite build",
-        "copy-files": "mkdir -p public/plugins/assets/select2 && find node_modules/select2/ -type f -exec cp {} public/plugins/assets/select2/ \\;",
+        "copy-files": "mkdir -p public/plugins/select2 && find node_modules/select2/ -type f -exec cp {} public/plugins/select2/ \\;",
         "build:prod": "cross-env NODE_ENV=production vite build"
     },
     "devDependencies": {
