--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
         "dev": "vite",
         "build": "npm-run-all build-app copy-files",
         "build-app": "vite build",
-        "copy-files": "mkdir -p public/plugins/select2 && find node_modules/select2/ -type f -exec cp {} public/plugins/select2/ \\;",
+        "copy-files": "ncp node_modules/select2 build/plugins",
         "build:prod": "cross-env NODE_ENV=production vite build"
     },
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
+        "ncp": "^2.0.0",
         "select2": "^4.1.0-rc.0",
         "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
