--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "dev": "vite",
         "build": "npm-run-all build-app copy-files",
         "build-app": "vite build",
-        "copy-files": "ncp node_modules/select2 build/plugins",
+        "copy-files": "mkdirp public/build/plugins && ncp node_modules/select2 public/build/plugins/select2",
         "build:prod": "cross-env NODE_ENV=production vite build"
     },
     "devDependencies": {
@@ -25,6 +25,7 @@
         "jquery": "^3.7.1",
         "jquery-ui-dist": "^1.13.2",
         "lodash": "^4.17.21",
+        "mkdirp": "^3.0.1",
         "npm-run-all": "^4.1.5",
         "sweetalert2": "^11.7.31"
     }
