--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "npm-run-all build-app copy-files",
+        "build": "npm-run-all build-app copy-jquery copy-select2",
         "build-app": "vite build",
-        "copy-files": "mkdirp public/build/plugins && ncp node_modules/select2 public/build/plugins/select2",
+        "copy-select2": "mkdirp public/build/plugins && ncp node_modules/select2 public/build/plugins/select2",
+        "copy-jquery": "mkdirp public/build/plugins && ncp node_modules/jquery public/build/plugins/jquery",
         "build:prod": "cross-env NODE_ENV=production vite build"
     },
     "devDependencies": {
@@ -27,6 +28,6 @@
         "lodash": "^4.17.21",
         "mkdirp": "^3.0.1",
         "npm-run-all": "^4.1.5",
-        "sweetalert2": "^11.7.31"
+        "sweetalert2": "^11.6.13"
     }
 }
