Define https to vite

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "build:prod": "cross-env NODE_ENV=production vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-basic-ssl": "^1.0.1",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "ncp": "^2.0.0",
