--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "mews/captcha": "^3.3",
-        "morilog/jalali": "3.*",
+        "morilog/jalali": "^3.4",
         "phpoffice/phpspreadsheet": "^1.29",
         "realrashid/sweet-alert": "^7.0",
         "ybazli/faker": "^1.0"
