--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "npm-run-all build-app copy-jquery copy-select2",
+        "build": "npm-run-all build-app copy-jquery copy-select2 copy-tailwindcss",
         "build-app": "vite build",
         "copy-select2": "mkdirp public/build/plugins && ncp node_modules/select2 public/build/plugins/select2",
         "copy-jquery": "mkdirp public/build/plugins && ncp node_modules/jquery public/build/plugins/jquery",
+        "copy-tailwindcss": "mkdirp public/build/plugins && ncp node_modules/tailwindcss public/build/plugins/tailwindcss",
         "build:prod": "cross-env NODE_ENV=production vite build"
     },
     "devDependencies": {
         "@vitejs/plugin-basic-ssl": "^1.0.1",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "ncp": "^2.0.0",
+        "postcss": "^8.4.31",
         "select2": "^4.1.0-rc.0",
-        "tailwindcss": "^3.3.2",
+        "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
     },
     "dependencies": {
