Add loading popup + JS script for show and hide + Add @tailwindcss/typography plugin

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@flaticon/flaticon-uicons": "^2.3.0",
         "@fortawesome/fontawesome-free": "^6.4.0",
+        "@tailwindcss/typography": "^0.5.10",
         "@vitejs/plugin-vue": "^4.2.3",
         "daisyui": "^3.4.0",
         "feather-icons": "^4.29.0",
